objects/ServiceErrorHandling__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Dependiendo del codigo de error que devuelve algun servicio, se retornara un mensaje</description>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>ServiceErrorHandling</label>
</CustomObject>